* fixed + and - stock quantity * added `maxlength` attr 15 * added gap on `popup-right-wrapper` * moved test.png to items/default.png > replaced respective paths

--- a/public/css/general/popup.css
+++ b/public/css/general/popup.css
@@ -174,8 +174,11 @@
 #popup-right-wrapper {
     display: flex;
     flex-direction: column;
-
     width: 200px;
+}
+
+.popup-label-image {
+    margin-top: 5px;
 }
 
 button:hover {
